# py-skymap

./: .gitattributes  .gitignore  LICENSE  README.md  download-gaia-csv.py  download-vizier.py  fetch-simbad-cache.py  gaia-query.py  pyproject.toml  skymap-gen.py
lib/: __init__.py  constants.py  gaia_client.py  math3d.py  plot_helper.py  progress.py  simbad_client.py  sqlite_helper.py  star_data.py  vizier_client.py
