[tool.poetry]
name = "py-skymap"
version = "0.1.0"
description = "Generate galactic hemisphere maps from Gaia DR3 data"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.0"
matplotlib = "^3.7.0"
astropy = "^7.0.0"
astroquery = "^0.4.7"
tqdm = "^4.65.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
